<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="123dp"
        app:srcCompat="@drawable/travellanka"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="53dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="31dp"
        android:layout_height="37dp"
        app:srcCompat="@drawable/facebook"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="581dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="550dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="329dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="331dp"
        android:layout_height="46dp"
        android:text="@string/btn_Register"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="463dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="256dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="31dp"
        android:layout_height="37dp"
        app:srcCompat="@drawable/google"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="581dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="403dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/text4"
        android:inputType="text"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="189dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="29dp" />
</androidx.constraintlayout.widget.ConstraintLayout>