<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/text"
    tools:context=".Login">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="213dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="290dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/btn_Login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="350dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#202C2E"
        android:text="@string/text"
        android:textColor="@color/text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="416dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="148dp"
        android:layout_height="123dp"
        app:srcCompat="@drawable/travellanka"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="75dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="473dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="31dp"
        android:layout_height="37dp"
        app:srcCompat="@drawable/google"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="500dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="31dp"
        android:layout_height="37dp"
        app:srcCompat="@drawable/facebook"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="500dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:textColor="@color/text"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="626dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>